--- a/styles.css
+++ b/styles.css
@@ -16,19 +16,19 @@ footer {
   font-family: sans-serif;
 }
 
-.w {
+.a {
   background: url('images/crash.png');
 }
 
-.a {
+.s {
   background: url('images/kick.png');
 }
 
-.s {
+.d {
   background: url('images/snare.png');
 }
 
-.d {
+.f {
   background: url('images/tom1.png');
 }
 
